Fix div overlap issue and add media queries for navbar opacity

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,3 @@
-@font-face {
-  font-family: 'Avenir';
-  src: url('fonts/Avenir.otf');
-}
-
-html {
-  font-family: 'Avenir';
-}
-
 body {
   background-color: #111111;
 }
@@ -23,11 +14,16 @@ canvas {
 }
 
 #particles-js {
+  z-index: -10;
+}
+
+#home {
+  position: relative;
 }
 
 .overlay {
   position: relative;
-  height: 100%;
+  min-height: 100%;
 }
 
 .body-header {
@@ -35,7 +31,6 @@ canvas {
   font-size: 48pt;
   font-family: 'Roboto', sans-serif;
   text-align: center;
-  padding-top: 75px;
 }
 
 .body-subheader {
@@ -56,6 +51,7 @@ canvas {
 
 .social-links {
   text-align: center;
+  display: block;
 }
 
 .social-links ul {
@@ -86,11 +82,7 @@ canvas {
 .nav-main {
   height: 100px;
 	text-align: center;
-  white-space: nowrap;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
 }
 
 @media (max-width: 800px) {
@@ -153,6 +145,15 @@ canvas {
   z-index: 1;
 }
 
+@media (max-width: 600px) {
+  .nav-fixed {
+    right: 0px;
+    left: 0px;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+  }
+}
+
 .nav-fixed ul {
   width: 300px;
   display: block;
@@ -191,8 +192,7 @@ canvas {
 
 #projects {
   position: relative;
-  height: 100%;
-  padding-top: 75px;
+  min-height: 100%;
 }
 
 .top-buffer {
@@ -201,12 +201,6 @@ canvas {
 
 .row.row-grid [class*="col-"] {
   margin-top: 25px;
-}
-
-.project-image {
-  opacity: 1;
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
 }
 
 .image-hover a img {
@@ -225,7 +219,6 @@ canvas {
 
 #footer {
   position: relative;
-  bottom: 0px;
   width: 100%;
 }
 
